# taster

./: Cargo.toml
src/: args.rs  common.rs  config.rs  email.rs  github.rs  history.rs  main.rs  repo.rs  slack.rs  taste.rs  taster.rs
src/history/: in_memory.rs  mod.rs  soup.rs
