[package]
name = "taster"
version = "0.0.1"
authors = ["Malte Schwarzkopf <malte@csail.mit.edu>"]

[features]
default = []
soup = ["api"]

[dependencies]
afterparty = { git = "https://github.com/ms705/afterparty" }
clap = "2.25.0"
api = { git = "https://github.com/mit-pdos/distributary", optional = true }
git2 = "0.6.4"
hyper = "0.10"
lettre = "0.6.2"
regex = "1.0.0"
slack-hook = { git = "https://github.com/ms705/rust-slack.git" }
toml = "0.2.1"
github-rs = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.2.2"
#slog = { version = "2.2.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.4.0"
