[package]
name = "taster"
version = "0.0.1"
authors = ["Malte Schwarzkopf <malte@csail.mit.edu>"]

[features]
default = []
use_noria = ["noria"]

[dependencies]
clap = "2.25.0"
noria = { git = "https://github.com/mit-pdos/noria", optional = true }
git2 = "0.6.4"
hyper = "0.12"
regex = "1.0.0"
rifling = { version = "0.4.0", features = ["parse"] }
slack-hook = { git = "https://github.com/ms705/rust-slack.git" }
toml = "0.2.1"
github-rs = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.2.2"
#slog = { version = "2.2.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.4.0"

[patch.crates-io]
tower-service = { git = "https://github.com/tower-rs/tower.git" }
tower-discover = { git = "https://github.com/tower-rs/tower.git" }
tower-balance = { git = "https://github.com/tower-rs/tower.git" }
tower-buffer = { git = "https://github.com/tower-rs/tower.git" }
tower-util = { git = "https://github.com/tower-rs/tower.git" }
tower = { git = "https://github.com/tower-rs/tower.git" }
